Modernize code with IntelliJ hints